SERVER-20557 Active window setting is not being processed properly